# ps-rust-actix-api

flight-plan/: Cargo.toml  README.md  config.toml
flight-plan/assets/: database pg.sql  database-pg.sql
flight-plan/src/: auth.rs  database.rs  endpoints.rs  main.rs  models.rs  schema.rs
