[package]
name = "flight-plan"
version = "0.1.0"
edition = "2021"
description = "Pluralsight Web API using Actix"
authors = ["Edward Curren"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl-sys = "0.9"
openssl = "0.10"
actix = "0.13.0"
actix-web = {version = "4.3.0", features= ["openssl"] }
actix-web-httpauth = "0.8.0"
actix-cors = "0.6.4"
rustls = "0.20.7"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
diesel = { version = "2", features = ["postgres_backend", "postgres", "r2d2", "numeric"] }
bigdecimal = "0.1.2"
uuid = { version = "1.2.2", features = ["v4"]}
env_logger = "0.10.0"
config = "0.13.3"
log = "0.4.20"
